--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -483,7 +483,8 @@ section{
             color: $blue;
         }
         @media (max-width:900px){
-            font-size: 30px;
+            font-size: 28px;
+            padding: 20px;
         } 
         @media (max-width:450px){
             text-align: center;
@@ -502,20 +503,57 @@ section{
         gap: 10px;
         @media (max-width:900px){
             display: block;
+            padding: 10px;
         }
         .working{
             padding-top: 70px;
+            animation: fallinout 1.5s ease-in; 
+                @keyframes fallinout {
+                    10%{
+                        transform: translateX(350%);
+                    }
+                }    
+            @media (max-width:900px){
+                padding: 0 60px;
+            } 
+            @media (max-width:390px){
+                padding: 0 20px;
+            }  
             h2{
-                font-size: 30px;
+                font-size: 40px;
                 margin-bottom: 30px;
                 text-align: center;
+                @media (max-width:1020px){
+                    font-size: 35px;
+                } 
+                @media (max-width:955px){
+                    font-size: 29px;
+                } 
+                @media (max-width:900px){
+                    font-size: 40px;
+                } 
+                @media (max-width:430px){
+                    margin-top: 30px;
+                    font-size: 25px;
+                }
             }
         }
         .youtube{
             position: relative;
             justify-self: flex-end;
+            animation: fallin 1.5s ease-in; 
+                @keyframes fallin {
+                    10%{
+                        transform: translateX(-350%);
+                    }
+                }
             img{
                 width: 530px;
+                @media (max-width:900px){
+                    width: 100%;
+                    height: 50vh;
+                    margin-top: 40px;
+                } 
             }
             .icon{
                 position: absolute;
@@ -523,6 +561,24 @@ section{
                     transform: translate(300%, -220%);
                     font-size: 70px;
                     color: red;
+                    @media (max-width:900px){
+                        transform: translate(500%, -220%);
+                    } 
+                    @media (max-width:855px){
+                        transform: translate(450%, -220%);
+                    } 
+                    @media (max-width:785px){
+                        transform: translate(400%, -220%);
+                    } 
+                    @media (max-width:685px){
+                        transform: translate(300%, -220%);
+                    } 
+                    @media (max-width:530px){
+                        transform: translate(200%, -200%);
+                    } 
+                    @media (max-width:370px){
+                        transform: translate(130%, -200%);
+                    } 
                 }
                 .icons{
                     position: absolute;
@@ -530,6 +586,24 @@ section{
                         transform: translate(1190%, -680%);
                         font-size: 30px;
                         color: black;
+                        @media (max-width:900px){
+                            transform: translate(1890%, -680%);
+                        } 
+                        @media (max-width:855px){
+                            transform: translate(1715%, -680%);
+                        } 
+                        @media (max-width:785px){
+                            transform: translate(1525%, -680%);
+                        } 
+                        @media (max-width:685px){
+                            transform: translate(1190%, -680%);
+                        } 
+                        @media (max-width:530px){
+                            transform: translate(840%, -629%);
+                        } 
+                        @media (max-width:370px){
+                            transform: translate(590%, -629%);
+                        } 
                     }
                 }
             }
@@ -538,7 +612,7 @@ section{
     .process{
         position: absolute;
         writing-mode: vertical-rl;
-        top: 225%;
+        margin-top: -220px;
         padding-left: 10px;
         @media (max-width:900px){
             display: none;
