--- a/style/collaborate.scss
+++ b/style/collaborate.scss
@@ -2,3 +2,8 @@
   display: flex;
   justify-content: space-between;
 }
+@mixin center {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
