--- a/style/suganya.css
+++ b/style/suganya.css
@@ -39,16 +39,68 @@
   width: 65%;
 }
 
+@media (max-width: 900px) {
+  .navbar_brand .logo img {
+    width: 75%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .logo img {
+    width: 100%;
+  }
+}
+
 .navbar_brand .open_menu {
   display: none;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .open_menu {
+    display: inline;
+    justify-self: end;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar_brand .open_menu i {
+    font-size: 35px;
+  }
 }
 
 .navbar_brand .close_menu {
   display: none;
 }
 
+@media (max-width: 1200px) {
+  .navbar_brand .close_menu {
+    font-size: 35px;
+    margin-left: 40px;
+    cursor: pointer;
+    color: #ffffff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .navbar_brand .navbar {
   margin-top: 15px;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar {
+    display: none;
+    position: fixed;
+    right: 0;
+    width: 70%;
+    height: 100vh;
+    margin-top: 0;
+    top: 0;
+    background-color: #15426d;
+    padding: 15px 0;
+  }
 }
 
 .navbar_brand .navbar ul {
@@ -61,6 +113,28 @@
           justify-content: space-between;
 }
 
+@media (max-width: 1200px) {
+  .navbar_brand .navbar ul {
+    display: block;
+  }
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 15px;
+    color: #ffffff;
+  }
+}
+
 .navbar_brand .navbar ul li:hover .drop {
   display: block;
 }
@@ -71,6 +145,13 @@
   position: relative;
   font-size: 20px;
   font-weight: bold;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar ul li a {
+    color: #ffffff;
+    font-weight: bold;
+  }
 }
 
 .navbar_brand .navbar ul li .fa-caret-down {
@@ -102,6 +183,16 @@
   background-color: #ffffff;
   width: 300px;
   border-radius: 5px;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar .drop {
+    width: 100%;
+    position: relative;
+    opacity: 1;
+    left: 0;
+    width: 100%;
+  }
 }
 
 .navbar_brand .navbar .drop .drop_down:hover {
@@ -142,10 +233,24 @@
   font-size: 27px;
 }
 
+@media (max-width: 1200px) {
+  .navbar_brand .navbar .fa-whatsapp {
+    color: #ffffff;
+    font-size: 30px;
+  }
+}
+
 .navbar_brand .navbar .fa-whatsapp p {
   color: #6d6875;
   font-size: 20px;
   margin-top: 5px;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar .fa-whatsapp p {
+    color: #ffffff;
+    font-weight: normal;
+  }
 }
 
 .navbar_brand .navbar .fa-phone {
@@ -154,10 +259,24 @@
   font-weight: bold;
 }
 
+@media (max-width: 1200px) {
+  .navbar_brand .navbar .fa-phone {
+    color: #ffffff;
+    font-size: 30px;
+  }
+}
+
 .navbar_brand .navbar .fa-phone p {
   color: #6d6875;
   font-size: 20px;
   margin-top: 6px;
+}
+
+@media (max-width: 1200px) {
+  .navbar_brand .navbar .fa-phone p {
+    color: #ffffff;
+    font-weight: normal;
+  }
 }
 
 .navbar_brand .navbar .fa-play {
@@ -176,6 +295,13 @@
   position: relative;
   margin-top: 5rem;
   height: 100vh;
+}
+
+@media (max-width: 900px) {
+  .search_bar {
+    background-image: url(/asset/images/background_img.png);
+    width: 100%;
+  }
 }
 
 .search_bar .search_box {
@@ -200,6 +326,16 @@
   border-radius: 5px;
 }
 
+@media (max-width: 900px) {
+  .search_bar .search_box {
+    background-color: #ffffff;
+    width: 90%;
+    -webkit-transform: translate(4%, -70%);
+            transform: translate(4%, -70%);
+    height: 50px;
+  }
+}
+
 .search_bar .search_box:hover {
   color: #1b3b6f;
   cursor: pointer;
@@ -216,16 +352,22 @@
 
 .search_bar .popular {
   text-align: center;
-  position: absolute;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: absolute;
   width: 100%;
   -webkit-transform: translate(0, 700%);
           transform: translate(0, 700%);
+}
+
+@media (max-width: 900px) {
+  .search_bar .popular {
+    display: none;
+  }
 }
 
 .search_bar .popular h5 {
@@ -298,6 +440,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -334,6 +477,15 @@
           transform: translate(0, 300%);
 }
 
+@media (max-width: 900px) {
+  .search_bar .moblie_app {
+    -webkit-transform: translate(0, 60%);
+            transform: translate(0, 60%);
+    display: inline-block;
+    text-align: center;
+  }
+}
+
 .search_bar .moblie_app .google {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -345,8 +497,24 @@
   gap: 10px;
 }
 
+@media (max-width: 900px) {
+  .search_bar .moblie_app .google {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-self: flex-end;
+    margin-bottom: 20px;
+  }
+}
+
 .search_bar .moblie_app .google img {
   width: 30px;
+}
+
+@media (max-width: 900px) {
+  .search_bar .moblie_app .google img {
+    width: 40px;
+  }
 }
 
 .search_bar .moblie_app .stars {
@@ -357,6 +525,18 @@
       -ms-flex-align: center;
           align-items: center;
   color: #ff7d00;
+}
+
+@media (max-width: 900px) {
+  .search_bar .moblie_app .stars {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #ff7d00;
+  }
 }
 
 .search_bar .moblie_app .google_play {
@@ -370,17 +550,22 @@
   margin: 0 5px -18px 50px;
 }
 
+@media (max-width: 900px) {
+  .search_bar .moblie_app .google_play p {
+    font-size: 30px;
+    margin-left: 10px;
+    margin-bottom: -40px;
+  }
+}
+
 .search_bar .moblie_app .google_play img {
   width: 35%;
   height: 100%;
 }
 
-@media (max-width: 500px) {
-  .search_bar .moblie_app {
-    top: 50px;
-  }
-  .search_bar .moblie_app .google_play {
-    margin-top: 30px;
+@media (max-width: 900px) {
+  .search_bar .moblie_app .google_play img {
+    width: 75%;
   }
 }
 
@@ -441,6 +626,22 @@
   border-radius: 5px;
   -webkit-box-shadow: 0 2px 10px 0 black;
           box-shadow: 0 2px 10px 0 black;
+  -webkit-animation: pulse 4s ease-out infinite;
+          animation: pulse 4s ease-out infinite;
+}
+
+@-webkit-keyframes pulse {
+  10% {
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+  }
+}
+
+@keyframes pulse {
+  10% {
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+  }
 }
 
 .card_container .animation_card .cards h2 {
@@ -455,140 +656,5 @@
 .card_container .animation_card .cards img {
   margin-bottom: 10px;
   width: 20%;
-}
-
-@media (max-width: 1200px) {
-  .navbar_brand .logo {
-    width: 145%;
-  }
-  .navbar_brand .open_menu {
-    display: inline;
-    -ms-grid-column-align: end;
-        justify-self: end;
-    cursor: pointer;
-  }
-  .navbar_brand .open_menu i {
-    font-size: 40px;
-  }
-  .navbar_brand .close_menu {
-    font-size: 35px;
-    margin-left: 40px;
-    cursor: pointer;
-    color: #ffffff;
-  }
-  .navbar_brand .navbar {
-    display: none;
-    position: fixed;
-    right: 0;
-    width: 70%;
-    height: 100vh;
-    margin-top: 0;
-    top: 0;
-    background-color: #15426d;
-    padding: 15px 0;
-  }
-  .navbar_brand .navbar ul {
-    display: block;
-  }
-  .navbar_brand .navbar ul li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 15px;
-    color: #ffffff;
-  }
-  .navbar_brand .navbar ul li a {
-    color: #ffffff;
-    font-weight: normal;
-  }
-  .navbar_brand .navbar ul li .drop {
-    width: 100%;
-    position: relative;
-    opacity: 1;
-    left: 0;
-    width: 100%;
-  }
-  .navbar_brand .navbar .fa-whatsapp {
-    color: #ffffff;
-    font-size: 30px;
-  }
-  .navbar_brand .navbar .fa-whatsapp p {
-    color: #ffffff;
-    font-weight: normal;
-  }
-  .navbar_brand .navbar .fa-phone {
-    color: #ffffff;
-    font-size: 30px;
-  }
-  .navbar_brand .navbar .fa-phone p {
-    color: #ffffff;
-    font-weight: normal;
-  }
-  .navbar_brand .navbar .btn button {
-    background-color: #ff9f1c;
-  }
-  .navbar_brand .navbar .btn button:hover {
-    background: #1b3b6f;
-  }
-  .navbar_brand .open_menu,
-  .navbar_brand .close_menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media (max-width: 900px) {
-  .search_bar {
-    background-image: url(/asset/images/background_img.png);
-    width: 100%;
-  }
-  .search_bar .popular {
-    display: none;
-  }
-  .search_bar .search_box {
-    background-color: #ffffff;
-    width: 90%;
-    -webkit-transform: translate(4%, -70%);
-            transform: translate(4%, -70%);
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    height: 50px;
-  }
-  .search_bar .moblie_app {
-    -webkit-transform: translate(0, 90%);
-            transform: translate(0, 90%);
-    display: inline-block;
-    text-align: center;
-  }
-  .search_bar .google {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-self: flex-end;
-    margin-bottom: 20px;
-  }
-  .search_bar .google img {
-    width: 40px;
-  }
-  .search_bar .google .stars {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    color: #ff7d00;
-  }
-  .search_bar .google_play img {
-    width: 75%;
-  }
 }
 /*# sourceMappingURL=suganya.css.map */
