--- a/styles/mixin.scss
+++ b/styles/mixin.scss
@@ -17,3 +17,14 @@
     justify-content: center;
     list-style: none;
 }
+
+@mixin vertical{
+    position: absolute;
+        writing-mode: vertical-rl;
+        h2{
+            font-size: 40px;
+            color: rgba(104, 104, 105, 0.46);
+            text-transform: uppercase;
+            letter-spacing: 5px;
+        }
+}
