--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -479,6 +479,12 @@ section{
         padding: 0px 40px 40px;
         font-size: 40px;
         line-height: 1.2;
+        animation: fallout 1.5s ease-in; 
+                @keyframes fallout {
+                    10%{
+                        transform: translateX(-350%);
+                    }
+                } 
         span{
             color: $blue;
         }
@@ -610,24 +616,110 @@ section{
         }
     }
     .process{
-        position: absolute;
-        writing-mode: vertical-rl;
-        margin-top: -220px;
-        padding-left: 10px;
+        margin-top: -230px;
+        @include vertical;
         @media (max-width:900px){
             display: none;
-        }
-        h2{
-            font-size: 40px;
-            color: rgba(104, 104, 105, 0.46);
-            text-transform: uppercase;
-            letter-spacing: 5px;
         }
     }
 }
 
 
 
+section{
+    .services{
+        background-image: url(../assets/images/background-services.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        padding: 50px 10px 50px 50px;
+        margin-top: -4px;
+        @media (max-width:950px){
+            display: block;
+        }
+        @media (max-width:900px){
+            padding: 50px;
+        }
+        @media (max-width:450px){
+            padding: 20px;
+        }
+        @media (max-width:330px){
+            padding: 5px;
+        }
+        .business-registration{
+            margin-top: 5px;
+            ul{
+                text-decoration: none;
+                list-style: none;
+                li{
+                    p{
+                        background-color: $white;
+                        color: $black;
+                        padding: 15px;
+                        text-align: center;
+                        font-weight: bold;
+                    }
+                    text-transform: capitalize;
+                    color: $white;
+                    background-color: $dark-blue;
+                    margin-bottom: 10px;
+                    padding: 10px;
+                }
+            }
+        }
+        .registration{
+            .cards{
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                @media (max-width:900px){
+                    display: block;
+                }
+                .card{
+                    text-align: center;
+                    background-color: $white;
+                    margin: 10px 5px;
+                    padding: 25px;
+                    border-radius: 10px;
+                    img{
+                        width: 70px;
+                        padding-bottom: 20px;
+                    }
+                    h2{
+                        padding-bottom: 20px;
+                        text-transform: capitalize;
+                    }
+                    p{
+                        padding-bottom: 20px;
+                    }
+                    button{
+                        background-color: $orange;
+                        width: 200px;
+                        padding: 10px 30px;
+                        border: none;
+                        text-transform: capitalize;
+                        border-radius: 5px;
+                        font-weight: 700;
+                        &:hover{
+                            background: $dark-blue;
+                            color: $white;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .service{
+        margin-top: -330px;
+        @include vertical;
+        @media (max-width:950px){
+            margin-top: -550px;
+        }
+        @media (max-width:900px){
+            display: none;
+        }
+    }
+}
 
 
 
