--- a/kowshik.css
+++ b/kowshik.css
@@ -180,15 +180,38 @@ h2 {
 }
 
 .hero-list {
-  width: 630px;
+  width: 650px;
   margin: auto;
 }
 
-.hero-list a {
-  width: 100%;
-  height: 50px;
-  background-color: #9a7676;
-  gap: 20px;
+.hero-list ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hero-list ul li p {
+  background-color: #dad7d7;
+  font-weight: bold;
+  font-size: 15px;
+  border-radius: 10px;
+  margin: 4px 7px;
+  padding: 6px;
+  color: #636161;
+}
+
+.hero-list ul li p:hover {
+  background: #6910EF;
+  color: white;
 }
 
 .blog {
@@ -224,8 +247,25 @@ h2 {
 
 .blog .blog-box1 {
   width: 280px;
+  -webkit-animation: pulse 1.5s ease-out infinite;
+          animation: pulse 1.5s ease-out infinite;
   border-radius: 13px;
-  background-color: #dad7d7;
+  background-color: #9d9b9b;
+  z-index: -200;
+}
+
+@-webkit-keyframes pulse {
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+}
+
+@keyframes pulse {
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
 }
 
 .blog .blog-box1 h1 {
@@ -239,7 +279,7 @@ h2 {
   padding: 20px;
   font-size: 18px;
   line-height: 1.2em;
-  color: #636161;
+  color: white;
 }
 
 .faith h1 {
