--- a/kowshik.scss
+++ b/kowshik.scss
@@ -166,31 +166,48 @@ h2 {
 }
 
 .hero-list {
-    width: 630px;
+    width: 650px;
     margin: auto;
+   
+   
+    
+    
 
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+      flex-wrap: wrap;
+      
 
-    a {
+      li {
+        p {
+          background-color: $myLightgrey;
+          font-weight: bold;
+          font-size: 15px;
+          border-radius: 10px;
+          margin: 4px 7px;
+          padding: 6px;
+          color: $myGrey;
+          &:hover {
+            background: $myViolet;
+            color: $myWhite;
 
-
-        width: 100%;
-        height: 50px;
-        background-color: rgb(154, 118, 118);
-        gap: 20px;
-
+          }
+        }
+      }
     }
-
-
-
-}
+  }
 
 .blog {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    
     padding: 2em;
 
-
+  
 
     .corpbiz {
 
@@ -219,9 +236,17 @@ h2 {
 
     .blog-box1 {
         width: 280px;
+        animation: pulse 1.5s ease-out infinite;
+
+        @keyframes pulse {
+            50% {
+                transform: scale(0.9);
+            }
+        }
 
         border-radius: 13px;
-        background-color: $myLightgrey;
+        background-color: $myMidgrey;
+        z-index: -200;
 
 
 
@@ -236,7 +261,7 @@ h2 {
             padding: 20px;
             font-size: 18px;
             line-height: 1.2em;
-            color: $myGrey;
+            color: $myWhite;
         }
     }
 
@@ -479,14 +504,14 @@ h2 {
 
 }
 
-.partner{
+.partner {
     font-size: 20px;
     font-weight: 400;
     text-align: center;
     padding: 2em;
     color: $myGrey;
 
-    span{
+    span {
         color: $myViolet;
     }
 }
@@ -521,70 +546,71 @@ h2 {
 }
 
 
-.container-list{
+.container-list {
     width: 100%;
 
 
 
 
-  .slider-container{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-  }
+    .slider-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 
 
 
-    .slides{
+    .slides {
         display: flex;
         flex-direction: column;
         justify-content: center;
         text-align: right;
 
 
-     .slide1{
+        .slide1 {
 
-        .image1{
-            padding-bottom: 20px;
-           
-           
-            
+            .image1 {
+                padding-bottom: 20px;
 
 
-            .fa-user-graduate{
-                background-color: $myGrey;
-                border-radius: 50%;
-                font-size: 40px;
-                width: 80px;
-                height: 80px;
-                display: inline-flex;
-                place-items: center;
-                align-items: center;
-                justify-content: center;
-                color: $myWhite;
-                
+
+
+
+                .fa-user-graduate {
+                    background-color: $myGrey;
+                    border-radius: 50%;
+                    font-size: 40px;
+                    width: 80px;
+                    height: 80px;
+                    display: inline-flex;
+                    place-items: center;
+                    align-items: center;
+                    justify-content: center;
+                    color: $myWhite;
+
+                }
+
             }
-        
+
+            .fa-star {
+                color: $myMidgrey;
+
+            }
+
         }
 
-        .fa-star{
-            color: $myMidgrey;
-            
-        }
-
-     }
 
 
-       
     }
 
-    
-    
-    p{
+
+
+    p {
         font-size: 18px;
         color: $myGrey;
         margin-bottom: 10px;
     }
-    h6{
+
+    h6 {
         font-size: 20px;
         color: $myViolet;
     }
