--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -610,21 +610,21 @@ section .choose-corpiz .corpiz {
   background-color: #15426d;
   color: #fff;
   padding: 100px 40px;
-  -webkit-animation: bounce 1.5s ease-in;
-          animation: bounce 1.5s ease-in;
+  -webkit-animation: bouncein 1.5s ease-in;
+          animation: bouncein 1.5s ease-in;
 }
 
-@-webkit-keyframes bounce {
+@-webkit-keyframes bouncein {
   10% {
-    -webkit-transform: translateY(-150%);
-            transform: translateY(-150%);
+    -webkit-transform: translateX(-350%);
+            transform: translateX(-350%);
   }
 }
 
-@keyframes bounce {
+@keyframes bouncein {
   10% {
-    -webkit-transform: translateY(-150%);
-            transform: translateY(-150%);
+    -webkit-transform: translateX(-350%);
+            transform: translateX(-350%);
   }
 }
 
@@ -986,6 +986,22 @@ section .services {
       grid-template-columns: 1fr 3fr;
   padding: 50px 10px 50px 50px;
   margin-top: -4px;
+  -webkit-animation: bounce 1.5s ease-in;
+          animation: bounce 1.5s ease-in;
+}
+
+@-webkit-keyframes bounce {
+  10% {
+    -webkit-transform: translateY(350%);
+            transform: translateY(350%);
+  }
+}
+
+@keyframes bounce {
+  10% {
+    -webkit-transform: translateY(350%);
+            transform: translateY(350%);
+  }
 }
 
 @media (max-width: 950px) {
@@ -1013,7 +1029,7 @@ section .services {
 }
 
 section .services .business-registration {
-  margin-top: 5px;
+  margin-top: 18px;
 }
 
 section .services .business-registration ul {
@@ -1093,6 +1109,8 @@ section .service {
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
+  -webkit-animation: bounce 1.5s ease-in;
+          animation: bounce 1.5s ease-in;
 }
 
 section .service h2 {
@@ -1100,6 +1118,13 @@ section .service h2 {
   color: rgba(104, 104, 105, 0.46);
   text-transform: uppercase;
   letter-spacing: 5px;
+}
+
+@keyframes bounce {
+  10% {
+    -webkit-transform: translateY(350%);
+            transform: translateY(350%);
+  }
 }
 
 @media (max-width: 950px) {
@@ -1112,6 +1137,127 @@ section .service h2 {
   section .service {
     display: none;
   }
+}
+
+section .application {
+  background-image: url(../assets/images/background-lap.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+section .application .app-forms {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  text-transform: capitalize;
+  -webkit-animation: rubberband 1s;
+          animation: rubberband 1s;
+}
+
+@-webkit-keyframes rubberband {
+  75% {
+    -webkit-transform: scale3d(-1.25, 0.75, 1);
+            transform: scale3d(-1.25, 0.75, 1);
+  }
+}
+
+@keyframes rubberband {
+  75% {
+    -webkit-transform: scale3d(-1.25, 0.75, 1);
+            transform: scale3d(-1.25, 0.75, 1);
+  }
+}
+
+@media (max-width: 900px) {
+  section .application .app-forms {
+    display: block;
+  }
+}
+
+section .application .app-forms .forms:not(:last-of-type) {
+  border-right: 1px solid #fff;
+}
+
+@media (max-width: 900px) {
+  section .application .app-forms .forms:not(:last-of-type) {
+    border-right: 0;
+    border-bottom: 1px solid #fff;
+  }
+}
+
+section .application .app-forms .forms {
+  padding: 50px 20px;
+}
+
+section .application .app-forms .forms:hover {
+  background-image: url(../assets/images/bg-approach.jpg);
+  -webkit-box-shadow: 0 15px 250px 20px #15426d;
+          box-shadow: 0 15px 250px 20px #15426d;
+}
+
+section .application .app-forms .forms .form {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  color: #fff;
+  text-align: center;
+}
+
+section .application .app-forms .forms .form img {
+  width: 70px;
+  margin-bottom: 20px;
+}
+
+section .application .app-forms .forms .form h4 {
+  font-size: 25px;
+}
+
+@media (max-width: 900px) {
+  section .application .app-forms .forms .form h4 {
+    margin-bottom: 40px;
+  }
+}
+
+section .app-corpiz {
+  background-image: url(../assets/images/mobile-app-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  padding: 84px 40px;
+  margin-top: 6rem;
+  margin-left: 15px;
+  width: 97%;
+  max-height: 100vh;
+  border-radius: 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+section .app-corpiz .corpiz h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+section .app-corpiz .corpiz p {
+  margin-bottom: 20px;
+  line-height: 30px;
+}
+
+section .app-corpiz .corpiz img {
+  width: 200px;
+}
+
+section .app-corpiz .app {
+  position: absolute;
+  -webkit-transform: translate(127%, -16%);
+          transform: translate(127%, -16%);
+}
+
+section .app-corpiz .app img {
+  width: 100%;
 }
 
 @media (max-width: 1100px) {
