--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -1226,18 +1226,65 @@ section .app-corpiz {
   position: relative;
   padding: 84px 40px;
   margin-top: 6rem;
-  margin-left: 15px;
-  width: 97%;
+  margin-left: 115px;
+  width: 80%;
   max-height: 100vh;
   border-radius: 20px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 1050px) {
+  section .app-corpiz {
+    width: 90%;
+    margin-left: 50px;
+  }
+}
+
+@media (max-width: 950px) {
+  section .app-corpiz {
+    width: 95%;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  section .app-corpiz {
+    width: 97%;
+    margin-left: 0;
+    margin: 30px 10px;
+  }
+}
+
+@media (max-width: 550px) {
+  section .app-corpiz {
+    padding: 50px 10px;
+    margin-left: 5px;
+  }
+}
+
+@media (max-width: 350px) {
+  section .app-corpiz {
+    padding: 10px;
+  }
+}
+
+section .app-corpiz .corpiz {
+  padding-right: 500px;
+}
+
+@media (max-width: 850px) {
+  section .app-corpiz .corpiz {
+    padding: 50px;
+  }
+}
+
+@media (max-width: 650px) {
+  section .app-corpiz .corpiz {
+    padding: 50px 20px;
+  }
 }
 
 section .app-corpiz .corpiz h2 {
-  font-size: 30px;
+  font-size: 40px;
   margin-bottom: 20px;
 }
 
@@ -1252,12 +1299,67 @@ section .app-corpiz .corpiz img {
 
 section .app-corpiz .app {
   position: absolute;
-  -webkit-transform: translate(127%, -16%);
-          transform: translate(127%, -16%);
 }
 
 section .app-corpiz .app img {
+  -webkit-transform: translate(135%, -82%);
+          transform: translate(135%, -82%);
   width: 100%;
+}
+
+@media (max-width: 1450px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(150%, -82%);
+            transform: translate(150%, -82%);
+  }
+}
+
+@media (max-width: 1350px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(130%, -82%);
+            transform: translate(130%, -82%);
+  }
+}
+
+@media (max-width: 1250px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(100%, -82%);
+            transform: translate(100%, -82%);
+  }
+}
+
+@media (max-width: 1120px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(80%, -82%);
+            transform: translate(80%, -82%);
+  }
+}
+
+@media (max-width: 962px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(80%, -93.5%);
+            transform: translate(80%, -93.5%);
+  }
+}
+
+@media (max-width: 952px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(80%, -82.5%);
+            transform: translate(80%, -82.5%);
+  }
+}
+
+@media (max-width: 910px) {
+  section .app-corpiz .app img {
+    -webkit-transform: translate(80%, -93.5%);
+            transform: translate(80%, -93.5%);
+  }
+}
+
+@media (max-width: 850px) {
+  section .app-corpiz .app img {
+    display: none;
+  }
 }
 
 @media (max-width: 1100px) {
