--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -799,15 +799,42 @@ section{
         position: relative;
         padding: 84px 40px;
         margin-top: 6rem;
-        margin-left: 15px;
-        width: 97%;
+        margin-left: 115px;
+        width: 80%;
         max-height: 100vh;
         border-radius: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        // display: grid;
+        // grid-template-columns: 1fr ;
+        @media (max-width:1050px){
+            width: 90%;
+            margin-left: 50px;
+        }
+        @media (max-width:950px){
+            width: 95%;
+            margin-left: 20px;
+        }
+        @media (max-width:700px){
+            width: 97%;
+            margin-left: 0;
+            margin: 30px 10px;
+        }
+        @media (max-width:550px){
+            padding: 50px 10px;
+            margin-left: 5px;
+        }
+        @media (max-width:350px){
+            padding: 10px;
+        }
         .corpiz{
+            padding-right: 500px;
+            @media (max-width:850px){
+                padding: 50px;
+            }
+            @media (max-width:650px){
+                padding: 50px 20px;
+            }
             h2{
-                font-size: 30px;
+                font-size: 40px;
                 margin-bottom: 20px;
             }
             p{
@@ -820,9 +847,34 @@ section{
         }
         .app{
             position: absolute;
-            transform: translate(127%, -16%);
+
             img{
+                transform: translate(135%, -82%);
                 width: 100%;
+                @media (max-width:1450px){
+                    transform: translate(150%, -82%);
+                }
+                @media (max-width:1350px){
+                    transform: translate(130%, -82%);
+                }
+                @media (max-width:1250px){
+                    transform: translate(100%, -82%);
+                }
+                @media (max-width:1120px){
+                    transform: translate(80%, -82%);
+                }
+                @media (max-width:962px){
+                    transform: translate(80%, -93.5%);
+                }
+                @media (max-width:952px){
+                    transform: translate(80%, -82.5%);
+                }
+                @media (max-width:910px){
+                    transform: translate(80%, -93.5%);
+                }
+                @media (max-width:850px){
+                    display: none;
+                }
             }
         }
     }
